<resources>

    <string name="app_name">WenJin</string>

    <string name="JPUSH_APPKEY" translatable="false">5fb608f1d509c30234c4bbaa</string>
    <string name="UMENG_APPKEY" translatable="false">553cc331e0f55aca9d0059bf</string>
    <string name="BUG_HD_SDK_GENERAL_KEY" translatable="false">0d377ef5e746db9ac47196038ad6a0c7</string>

    <string name="network_not_connected">Network is not connected</string>
    <string name="no_more_information">Sorry, no more information</string>
    <string name="pic">[picture]</string>
    <string name="load_more">Loading…</string>
    <string name="years_ago">years ago</string>
    <string name="months_ago">months ago</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="just_now">Just now</string>
    <string name="add_in">add in</string>
    <string name="reply">Reply</string>
    <string name="quit">Press again to quit</string>
    <string name="not_exist">User does not exist</string>


    <!-- Main Activity -->
    <string name="action_notification">Notification</string>
    <string name="action_search">Search</string>

    <!-- Innerweb Activity-->
    <string name="title_activity_website">Website</string>

    <!-- Search Activity-->
    <string name="title_activity_search">Search</string>
    <string name="hint_action_search">Please input keywords</string>
    <string name="search_question">Question</string>
    <string name="search_article">Article</string>
    <string name="search_topic">Topic</string>
    <string name="search_user">User</string>
    <string name="search_nothing">Theres nothing</string>

    <!-- Drawer strings -->
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">close drawer navigation</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_explore">Explore</string>
    <string name="drawer_item_topic">Topic</string>
    <string name="drawer_item_draft">Draft</string>
    <string name="drawer_item_notification">Notifications</string>
    <string name="drawer_item_user">User</string>
    <string name="drawer_item_setting">Setting</string>
    <string name="drawer_item_helper_and_feedback">Help &amp; feedback</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_divider_system">System</string>

    <!-- Home strings -->
    <string name="post_question">Question asked</string>
    <string name="concern_question">Question followed</string>
    <string name="reply_question">Answer written</string>
    <string name="agree_answer">Upvote this answer</string>
    <string name="post_article">Article post written</string>
    <string name="agree_article">Upvote this article</string>

    <string name="post_question_topic">Topic Add a question</string>
    <string name="reply_question_topic">Topic Add an answer</string>
    <string name="agree_answer_topic">Topic Add an answer upvote</string>
    <string name="post_article_topic">Topic Add an article</string>
    <string name="agree_article_topic">Topic Add an article upvote</string>

    <string name="fab_label_question">Question</string>
    <string name="fab_label_article">Article</string>


    <!-- Notification strings -->
    <string name="notification_unread">Unread</string>
    <string name="notification_read">Read</string>
    <string name="notification_markall">Mark all</string>

    <string name="agree_your_answer">Upvote your answer</string>
    <string name="agree_your_article">Upvote your article</string>
    <string name="followed_you">Followed you</string>
    <string name="question_comment_ated_you">Question comment mentioned you</string>
    <string name="invite_you_answer_question">Invited you to answer quesion</string>
    <string name="replied_your_comment">Replied your comment</string>
    <string name="comment_your_question">Commented your question</string>
    <string name="thanked_your_answer">Thanked your answer</string>
    <string name="edited_your_question">Edited your question</string>
    <string name="deleted_your_question">Deleted your question</string>
    <string name="thanked_your_question">Thanked your question</string>
    <string name="answer_ated_you">Answer mentioned you</string>
    <string name="answer_comment_atted_you">Answer comment mentioned you</string>
    <string name="comment_your_article">Replied your article</string>
    <string name="article_comment_mentioned_you">Article comment mentioned you</string>

    <string name="anonymous">Anonymous</string>
    <string name="markasread">Mark as read</string>


    <!-- Explore strings -->
    <string name="explore_hot">Hot</string>
    <string name="explore_new">New</string>
    <string name="explore_recommend">Recommend</string>
    <string name="explore_unresponsive">Unresponsive</string>

    <!-- Topic strings -->
    <string name="topic_hot">Hot topic</string>
    <string name="topic_focus">Focus topic</string>

    <!-- Topic detail strings -->
    <string name="title_activity_topic_detail">Topic Detail</string>

    <!-- Publish activity strings -->
    <string name="title_activity_publish">Publish</string>
    <string name="hint_publish_title">Question Title</string>
    <string name="hint_publish_content">Write something …</string>
    <string name="action_publish">Publish</string>
    <string name="action_insert_photo">Insert photo</string>
    <string name="publish_success">Publish successfully</string>
    <string name="publish_anonymous">Anonymous</string>

    <!-- Photo select dialog strings -->
    <string name="title_dialog_photo_select">Select photo</string>
    <string name="dialog_take_photo">take photo</string>
    <string name="dialog_local_photo">local photo</string>

    <!-- Login Activity strings -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_username_hint">TWT Username/Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_error_empty">Can Not Be Empty</string>
    <string name="login_signin">Sign In</string>

    <!-- Question activity strings -->
    <string name="title_activity_question">Question</string>
    <string name="action_focus">Focus</string>
    <string name="action_not_focus">Not focus</string>
    <string name="action_answer">Add Answer</string>
    <string name="action_share">Share</string>

    <!-- Answer detail activity strings -->
    <string name="title_activity_answer_detail">Answer detail</string>
    <string name="action_comment">Add Comment</string>
    <string name="action_upvote_msg">Upvote</string>
    <string name="action_downvote_msg">Downvote</string>
    <string name="action_cancel_upvote_msg">Cancel Upvote</string>
    <string name="action_cancel_downvote_msg">Cancel Downvote</string>
    <string name="action_thank_msg">Thanks</string>
    <string name="action_thanked_msg">Already Thanked</string>

    <!-- Answer activity strings -->
    <string name="title_activity_answer">Answer</string>
    <string name="hint_answer_content">Write answer …</string>

    <!-- Profile activity -->
    <string name="title_activity_profile">Profile</string>
    <string name="profile_focus_topic">Ta\'s Topics</string>
    <string name="profile_friend">Ta\'s friends</string>
    <string name="profile_fans">Ta\'s fans</string>
    <string name="profile_question">Question</string>
    <string name="profile_answer">Answer</string>
    <string name="profile_detail">Detail</string>
    <string name="action_edit">Edit</string>

    <!-- Comment activity -->
    <string name="title_activity_comment">Comment</string>
    <string name="comment_success">Comment successfully</string>

    <!-- Feedback activity -->
    <string name="title_activity_feedback">Help &amp; feedback</string>
    <string name="hint_feedback_content">Write your suggest…</string>
    <string name="hint_feedback_detail">Suggest detail(Optional)</string>

    <!-- Settings activity -->
    <string name="pref_category_notification">Notification</string>
    <string name="pref_category_others">Others</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_about_key" translatable="false">about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_check_version_key" translatable="false">check</string>
    <string name="pref_check_version_title">Check new version</string>
    <string name="pref_launch_notification_key" translatable="false">Launch Notification</string>
    <string name="pref_notification_title">Launch notification</string>
    <string name="pref_launch_notification_title">Launch notification</string>

    <!-- NotificationSetting activity -->
    <string name="title_activity_notificationsetting">Notification</string>

    <!-- About activity -->
    <string name="title_activity_about">About</string>

    <!-- Profile Askanswer activity -->
    <string name="title_activity_profile_askanswer">ProfileAskanswer</string>
    <string name="action_type_questions">Questions</string>
    <string name="action_type_answers">Answers</string>

    <!-- Welcome activity -->
    <string name="title_activity_welcome">Welcome</string>

    <!-- Update dialog strings -->
    <string name="update_message">Find new version</string>
    <string name="update">Update</string>
    <string name="update_later">Later</string>
    <string name="no_new_version">It is the latest version</string>

    <!--Follows Activity-->
    <string name="title_activity_follows">Follows</string>
    <string name="action_type_following">Following</string>
    <string name="action_type_followers">Followers</string>
    <string name="default_signature_profile_follows">There is nothing…</string>

    <!-- Profile Edit activity -->
    <string name="title_activity_profile_edit">Profile Edit</string>

    <!-- Prompt Dialog strings -->
    <string name="save_as_draft">Are want to save as draft?</string>
    <string name="save_successfully">save successfully</string>

    <!-- Draft fragment strings -->
    <string name="no_any_drafts">There are not any drafts.</string>
    <string name="action_delete">Delete</string>

    <!--Article activity-->
    <string name="title_activity_article">Article</string>
    <!-- Green Channel activity-->
    <string name="title_activity_green_channel">Green Channel</string>
    <!--Show Web Image Activity-->
    <string name="title_activity_show_web_image">图片查看</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
