<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.twt.service.wenjin.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_padding_left_right"
        android:layout_marginRight="@dimen/login_padding_left_right"
        android:layout_marginTop="@dimen/login_padding_top"
        android:contentDescription="@string/title_activity_login"
        android:src="@drawable/ic_login_logo" />

    <EditText
        android:id="@+id/tv_login_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginLeft="@dimen/login_padding_left_right"
        android:layout_marginRight="@dimen/login_padding_left_right"
        android:layout_marginTop="@dimen/login_magin_control"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_login_account"
        android:hint="@string/login_username_hint"
        android:maxLines="1"
        android:paddingLeft="@dimen/login_padding_control"
        android:paddingRight="@dimen/login_padding_control"
        android:singleLine="true" />

    <EditText
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginLeft="@dimen/login_padding_left_right"
        android:layout_marginRight="@dimen/login_padding_left_right"
        android:layout_marginTop="@dimen/login_magin_control"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_login_password"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/login_padding_control"
        android:paddingRight="@dimen/login_padding_control" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_padding_left_right"
        android:layout_marginRight="@dimen/login_padding_left_right"
        android:layout_marginTop="@dimen/login_magin_control"
        android:background="@drawable/button_focus"
        android:text="@string/login_btn_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/bt_green_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_padding_left_right"
        android:layout_marginRight="@dimen/login_padding_left_right"
        android:layout_marginTop="40dp"
        android:text="快速注册"
        android:textColor="@color/color_text_secondary"/>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_magin_control"
        android:visibility="gone" />

</LinearLayout>
